paginations styles on mobile was fixed and icons in checkout cards were improved

--- a/src/components/CheckoutCard/checkoutCard.scss
+++ b/src/components/CheckoutCard/checkoutCard.scss
@@ -54,7 +54,12 @@
   }
 
   &__button {
-    @include button-arrows;
+    @include button-more-less;
+
+    &_prev {
+      content: "+";
+
+    }
   }
 
   &__count {
