--- a/styles/utils/variables.scss
+++ b/styles/utils/variables.scss
@@ -5,6 +5,7 @@ $borders-gray-color: #e2e6e9;
 $accent-green: #27ae60;
 $accent-red: #eb5757;
 
+$logo: "https://i.gstatvb.com/c389a77ca305ee5d9f0ee6f87f74fcfb1688922827.rng.png";
 $arrow-left: 'https://i.gstatvb.com/666bd175cdc8706e8a3f147f985a8ebe1689008383.rng.png';
 $arrow-left-light: 'https://i.gstatvb.com/56257d53833d634b58ca1095b4d5ab0b1689364322.rng.png';
 $arrow-right: 'https://i.gstatvb.com/8f63a520b73400d453500cf67939b8ab1689008556.rng.png';
